# FractionClass

./: .CMakeLists.txt.swp  .gitignore  readme.md
Documentation/: doxy.config  doxyConfig.config
Documentation/html/: classfraction-members.html  classfraction.html  classfraction__coll__graph.map  classfraction__coll__graph.md5  classfraction_ad9cf1bb8fb5b761ed9bf3d47dd97af21_cgraph.map  classfraction_ad9cf1bb8fb5b761ed9bf3d47dd97af21_cgraph.md5  dir_000000_000002.html  dir_000001_000002.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  dir_d422163b96683743ed3963d4aac17747_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  doubleFractionTest_8cpp.html  doubleFractionTest_8cpp__incl.map  doubleFractionTest_8cpp__incl.md5  doubleFractionTest_8cpp_a1207693372a307be789ef04fd30a7569_cgraph.map  doubleFractionTest_8cpp_a1207693372a307be789ef04fd30a7569_cgraph.md5  doubleFractionTest_8cpp_a40e6086e840021d87e70d0f9015e4a94_cgraph.map  doubleFractionTest_8cpp_a40e6086e840021d87e70d0f9015e4a94_cgraph.md5  fraction_8hpp.html  fraction_8hpp__dep__incl.map  (+40 more)
FractionClass/: CMakeLists.txt  readme.md
FractionClass/test/: CMakeLists.txt  doubleFractionTest.cpp  integersFractionTest.cpp
app/: .main.cpp.swp  main.cpp
include/: .fraction.hpp.swn  .fraction.hpp.swo  .fraction.hpp.swp  fraction.hpp
test/: .integersFractionTest.cpp.swp  CMakeLists.txt  integersFractionTest.cpp  longDoubleFraction.cpp
(+84 files in other folders)
